# ownkey

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  LICENSE  PROJECT_SUMMARY.md  README.md  ROADMAP.md  SECURITY.md  TASKS.md  VISON.md  myvault.json  vault.json
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  keychain.rs  lib.rs  main.rs  models.rs  session.rs  vault.rs  vault_store.rs
src/cli/: sync_cmd.rs
src/commands/: add.rs  copy.rs  delete.rs  init.rs  list.rs  mod.rs  restore.rs  rotate_password.rs  search.rs  view.rs
src/sync/: backend.rs  error.rs  file.rs  mod.rs  noop.rs
tests/: cli_edge_cases.rs  cli_smoke.rs  reliability.rs  rotate_password.rs  sync_test.rs  vault_flow.rs
