[package]
name = "ownkey"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
security-framework = { version = "2", optional = true }
directories = "5"
fd-lock = "4.0"

[dependencies.aes-gcm]
version = "0.10"

[dependencies.pbkdf2]
version = "0.12"

[dependencies.rand]
version = "0.8"
features = ["std"]

[dependencies.sha2]
version = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"
